[package]
name = "wifi-connect"
version = "4.10.0"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"

[dependencies]
clap = "4.1.4"
iron = "0.6"
iron-cors = "0.8"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.4"
params = "0.8"
log = "0.4.17"
env_logger = "0.10.0"
nix = "0.26.2"
dbus = "0.9.7"
futures = "0.3.26"
futures-cpupool = "0.1"
tokio-timer = "0.2.13"
bitflags = "1.0"
ascii = "1.1.0"

[dependencies.error-chain]
version = "0.12"
default-features = false

[profile.release]
lto = true
